--- a/src/main/webapp/css/forum/forum-detail.css
+++ b/src/main/webapp/css/forum/forum-detail.css
@@ -193,6 +193,7 @@
 .content .reply-content ul {
     width: 375px;
     margin: 0 auto;
+    list-style: none;
 }
 
 .content .reply-content ul .reply-content-detail-list {
