--- a/src/main/webapp/css/forum/forum-reply-content.css
+++ b/src/main/webapp/css/forum/forum-reply-content.css
@@ -123,7 +123,7 @@
 
 .reply-area .reply-area-content .reply-area-content-reply-content .reply-area-content-button{
     width: 350px;
-    margin: 0 auto;
+    margin: 10px auto;
     overflow: hidden;
 }
 
