--- a/src/main/webapp/css/forum/forum-index.css
+++ b/src/main/webapp/css/forum/forum-index.css
@@ -143,7 +143,7 @@
 
 .content .forum-core ul .forum-list .forum-list-content .forum-list-content-title .reply-time {
     height: 40px;
-    width: 50px;
+    /*width: 50px;*/
     line-height: 40px;
     display: inline-block;
     margin-right: 10px;
